sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:10: error: not found: value Blue
      if (i <= afterBlue && getColor(i) != Blue){
                                           ^