sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {

  var whiteRed = getSize() - 1
  var beforeWhite = getSize() - 1
  
  while(!isSorted()){
    var afterBlue = 0
    for (i <- 0 to getSize()-2){
      if (i <= afterBlue && getColor(i) != Blue){
        swap(i,i+1)
        afterBlue += 1
      }

        }
      }
    }
  
  

